campaign monitor text-align responsive

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -269,6 +269,7 @@ $zen-auto-include-item-base: false;
   padding-left: 10px;
   margin-bottom: 0;
   margin-top: 10px;
+  text-align: left;
   p {
     margin: 0;
   }
@@ -277,6 +278,7 @@ $zen-auto-include-item-base: false;
   display: block;
   padding-left: 10px;
   margin-bottom: 0;
+  text-align: left;
   h2 {
     color: $gray;
     font-size: 0.85em;
@@ -511,6 +513,7 @@ $zen-auto-include-item-base: false;
   padding-left: 10px;
   margin-bottom: 0;
   margin-top: 10px;
+  text-align: left;
   p {
     margin: 0;
   }
@@ -519,6 +522,7 @@ $zen-auto-include-item-base: false;
   display: block;
   padding-left: 10px;
   margin-bottom: 0;
+  text-align: left;
   h2 {
     color: $gray;
     font-size: 0.85em;
