campaign monitor form element width desktop

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -553,10 +553,10 @@ $zen-auto-include-item-base: false;
     color: $white;
     font-size: 0.85em;
     font-size: 1vw;
-    float: right;
+    float: left;
     padding: 6px;
     padding: 0.45vw;
-    width: 30%;
+    width: 35%;
   }
 }
 .section-studio {
