--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -552,7 +552,7 @@ $zen-auto-include-item-base: false;
     color: $white;
     font-size: 0.85em;
     font-size: 1vw;
-    float: left;
+    float: right;
     padding: 6px;
     padding: 0.45vw;
     width: 35%;
