campaign monitor form element width desktop

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -545,6 +545,8 @@ $zen-auto-include-item-base: false;
     float: left;
   }
   .form-type-textfield input {
+    width: 140px;
+
   }
   #edit-submit {
     background: none repeat scroll 0 0 $dark-orange;
