campaign monitor form element width desktop

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -302,7 +302,7 @@ $zen-auto-include-item-base: false;
     width: 64%;
   }
   .form-type-textfield input {
-    width: 120px;
+    width: 100%;
   }
   #edit-submit {
     background: none repeat scroll 0 0 $dark-orange;
