bottom margin campaign

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -290,7 +290,8 @@ $zen-auto-include-item-base: false;
     font-size: 0.85em;
     font-size: 1vw;
     line-height: 1em;
-    margin-bottom: 0;
+    margin-bottom: 5px;
+    margin-bottom: 0.45vw;
     margin-top: 5px;
     margin-top: 0.45vw;
   }
