campaign monitor h2 margin bottom

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -113,6 +113,7 @@ $zen-auto-include-item-base: false;
     font-size: 1em;
     line-height: 1em;
     margin-bottom: 0.5em;
+    margin-bottom: 0.45vw;
     margin-top: 5px;
     margin-top: 0.45vw;
   }
@@ -543,7 +544,8 @@ $zen-auto-include-item-base: false;
     font-size: 0.85em;
     font-size: 1vw;
     line-height: 1em;
-    margin-bottom: 0;
+    margin-bottom: 5px;
+    margin-bottom: 0.45vw;
     margin-top: 5px;
     margin-top: 0.45vw;
   }
